apps/observability/opentelemetry-kube-stack/referencegrant.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/referencegrant_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: envoy-proxy-tracing
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: EnvoyProxy
      namespace: network
    - group: agentgateway.dev
      kind: AgentgatewayPolicy
      namespace: agents
  to:
    - group: ""
      kind: Service
      name: opentelemetry-kube-stack-daemon-collector
