apps/observability/opentelemetry-kube-stack/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: otlp-ingest-external
  labels:
    home-operations.com/pihole: ignore
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - otlp.darkflame.dev
  rules:
    - matches:
        - path: {type: Exact, value: /v1/traces}
        - path: {type: Exact, value: /v1/metrics}
        - path: {type: Exact, value: /v1/logs}
      backendRefs:
        - group: ""
          kind: Service
          name: opentelemetry-kube-stack-ingress-collector
          port: 4318
